#1440 fix scrollbar on pagetabs

--- a/src/Frontend.Nuxt/assets/tabs-bar.less
+++ b/src/Frontend.Nuxt/assets/tabs-bar.less
@@ -154,7 +154,7 @@
     }
 
     .tab-filler-container {
-        width: 100%;
+        flex-grow: 1;
     }
 
     button {
